@@ -1,3 +1,12 @@
+2007-06-14  Christian Persch  <chpe@gnome.org>
+
+	* embed/mozilla/GeckoPrintService.cpp:
+	* embed/mozilla/GeckoPrintSession.cpp:
+	* embed/mozilla/GeckoPrintSession.h:
+
+	Set the print as cancelled in the print settings too, see
+	https://bugzilla.mozilla.org/show_bug.cgi?id=253926.
+
 2007-06-10  Christian Persch  <chpe@gnome.org>
 
 	* data/default-prefs-common.js:
